# llm-d-kv-cache

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .golangci.yml  .licenserc.yaml  .pre-commit-config.yaml  CODEOWNERS  Makefile  OWNERS  README.md  _typos.toml  go.mod  go.sum
.github/: mergify.yml
.github/actions/docker-build-and-push/: action.yml
.github/actions/trivy-scan/: action.yml
.github/workflows/: auto-assign.yaml  ci-dev-uds-tokenizer.yaml  ci-examples.yaml  ci-lint.yaml  ci-nightly-race.yaml  ci-pr-checks.yaml  ci-release-uds-tokenizer.yaml  ci-release.yaml  ci-test.yaml  ci-uds-tokenizer.yaml  ci-wheels.yaml  odh-build-image.yaml  odh-release.yaml  size-label.yml  upstream-monitor.lock.yml  upstream-monitor.md
.tekton/: llm-d-kv-cache-release-push.yaml  odh-llm-d-kv-cache-push.yaml
api/indexerpb/: indexer.pb.go  indexer_grpc.pb.go
api/tokenizerpb/: tokenizer.pb.go  tokenizer.proto  tokenizer_grpc.pb.go
benchmarking/73-capacity/: README.md
docs/: configuration.md
examples/helper/: events.go  indexer.go  publisher.go
examples/kv_cache_aware_scorer/: kvcache_aware_scorer.go
examples/kv_cache_index/: README.md  main.go
examples/kv_cache_index_service/server/: main.go  server.go
examples/kv_events/offline/: main.go
examples/kv_events/online/: main.go
examples/kv_events/pod_reconciler/: main.go
examples/testdata/: block_stored_example.msgpack  data.go
examples/valkey_example/: README.md  main.go
hack/: remove-bad-AIPCC-jiter-hash.sh  verify-examples.sh
kv_connectors/llmd_fs_backend/: Makefile  README.md  pyproject.toml  setup.py
kv_connectors/llmd_fs_backend/csrc/storage/: file_io.cpp  logger.hpp  numa_utils.cpp  storage_handler.hpp  storage_offload.cpp  storage_offload.hpp  storage_offload_bindings.cpp  storage_types.hpp  tensor_copier.hpp  tensor_copier_kernels.cu  thread_pool.cpp  thread_pool.hpp
kv_connectors/llmd_fs_backend/csrc/storage/backends/fs_gds/: cufile_loader.hpp  gds_file_io.cpp  gds_file_io.hpp
kv_connectors/llmd_fs_backend/csrc/storage/backends/fs_io/: file_io.cpp  file_io.hpp
kv_connectors/llmd_fs_backend/docs/: cufile_rdma.json  gds.md  monitoring.md
kv_connectors/llmd_fs_backend/docs/deployment/: vllm-pvc.yaml  vllm-storage.yaml
kv_connectors/llmd_fs_backend/docs/deployment/monitoring/: grafana-dashboard-configmap.yaml  grafana.yaml  prometheus-servicemonitor.yaml  prometheus.yaml
kv_connectors/llmd_fs_backend/llmd_fs_backend/: __init__.py  manager.py  spec.py  worker.py
kv_connectors/llmd_fs_backend/tests/: conftest.py  test_fs_backend.py  test_gds_backend.py  test_priority_queue.py
kv_connectors/pvc_evictor/: ARCHITECTURE.md  CONFIGURATION.md  Dockerfile  QUICK_START.md  README.md  config.py  evictor.py
kv_connectors/pvc_evictor/helm/: Chart.yaml  README.md  values.yaml
kv_connectors/pvc_evictor/helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml
kv_connectors/pvc_evictor/processes/: __init__.py  activator.py  crawler.py  deleter.py
kv_connectors/pvc_evictor/utils/: __init__.py  logging_helpers.py  system.py
pkg/kvcache/: export_test.go  indexer.go  indexer_test.go  kvblock_scorer.go  kvblock_scorer_test.go  traced_scorer.go  traced_scorer_test.go  types.go
pkg/kvcache/kvblock/: cost_aware_memory.go  extra_keys.go  extra_keys_test.go  in_memory.go  in_memory_test.go  index.go  index_test.go  instrumented_index.go  instrumented_index_test.go  mm_vllm_capture_test.go  redis.go  token_processor.go  token_processor_test.go  traced_index.go  traced_index_test.go
pkg/kvevents/: pool.go  subscriber_manager_test.go  zmq_subscriber.go  zmq_subscriber_test.go
pkg/kvevents/engineadapter/: adapter.go  common.go  sglang_adapter.go  sglang_adapter_test.go  vllm_adapter.go  vllm_adapter_bench_test.go  vllm_adapter_test.go
pkg/telemetry/: tracing.go
pkg/tokenization/: embedded_tokenizer.go  embedded_tokenizer_test.go  pool.go  pool_test.go  tokenizer.go  uds_tokenizer.go  uds_tokenizer_test.go
pkg/tokenization/types/: types.go
services/uds_tokenizer/: Dockerfile  Dockerfile.konflux  README.md  pyproject.toml  requirements-test.txt  requirements.txt  run_grpc_server.py  tokenizer_grpc_service.py  update-hashes.sh
services/uds_tokenizer/tests/: __init__.py  conftest.py  test_integration.py  test_renderer.py
services/uds_tokenizer/tokenizer_service/: __init__.py  exceptions.py  renderer.py  tokenizer.py
services/uds_tokenizer/tokenizerpb/: tokenizer_pb2.py  tokenizer_pb2_grpc.py
services/uds_tokenizer/tokenizers/: README.md
services/uds_tokenizer/utils/: __init__.py  logger.py  thread_pool_utils.py
tests/e2e/redis_mock/: e2e_suite_test.go  e2e_test.go
tests/e2e/uds_tokenizer/: uds_e2e_mm_test.go  uds_e2e_suite_test.go  uds_e2e_test.go
tests/integration/: kv_events_test.go
vllm-setup-helm/: README.md
