[project]
name = "uds-tokenizer"
version = "0.1.0"
description = "UDS Tokenizer Service - gRPC tokenization over Unix Domain Socket"
requires-python = ">=3.12,<3.13"
dependencies = [
    # vLLM 0.18.0 CPU wheels — Linux-only, arch-conditional via PEP 508 markers
    # NOTE - these currently come from the cpu-ubi-test index. Once they clear we will need to consume the official CPU index builds:
    "vllm @ https://packages.redhat.com/api/pulp-content/public-rhai/rhoai/3.4/cpu-ubi9-test/vllm-0.18.0+rhaiv.0-6-cp312-cp312-linux_x86_64.whl ; platform_system == 'Linux' and platform_machine == 'x86_64'",
    "vllm @ https://packages.redhat.com/api/pulp-content/public-rhai/rhoai/3.4/cpu-ubi9-test/vllm-0.18.0+rhaiv.0-6-cp312-cp312-linux_aarch64.whl ; platform_system == 'Linux' and platform_machine == 'aarch64'",
    "pydantic>=2.12.0",
    "shortuuid>=1.0.13",
    "transformers>=4.57.0,<5",
    "safetensors>=0.7.0",
    "Jinja2>=3.1.6",
    "modelscope>=1.35.0",
    "huggingface-hub>=0.36.0",
    "aiohttp>=3.13.0",
    "protobuf>=6.31.1",
    "tiktoken>=0.12.0",
    "grpcio>=1.78.0",
    "grpcio-tools>=1.78.0",
    "grpcio-reflection>=1.78.0",
    ################################ TEMPORARY WORKAROUND FOR STAGING INDEXES ################################
    # Same as above, once this wheel lands in the official index we remove this req entirely
    "intel-cmplr-lib-ur @ https://packages.redhat.com/api/pulp-content/public-rhai/rhoai/3.4/cpu-ubi9-test/intel_cmplr_lib_ur-2024.2.1-py2.py3-none-manylinux1_x86_64.whl ; platform_system == 'Linux' and platform_machine == 'x86_64'",
    ##########################################################################################################
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.14.0",
    "pytest-timeout>=2.1.0",
    "requests>=2.25.0",
]

[tool.ruff]
exclude = ["tokenizerpb/*_pb2.py", "tokenizerpb/*_pb2_grpc.py"]

[tool.setuptools]
py-modules = ["tokenizer_grpc_service", "run_grpc_server"]

[tool.setuptools.packages.find]
include = ["tokenizer_service*", "tokenizerpb*", "utils*"]
