[project]
name = "uds-tokenizer"
version = "0.1.0"
description = "UDS Tokenizer Service - gRPC tokenization over Unix Domain Socket"
requires-python = ">=3.12,<3.13"
dependencies = [
    "vllm==0.18.0+rhaiv.4",
    "pydantic>=2.12.0",
    "shortuuid>=1.0.13",
    "transformers>=4.57.0,<5",
    "safetensors>=0.7.0",
    "Jinja2>=3.1.6",
    "huggingface-hub>=0.36.0",
    "aiohttp>=3.13.0",
    "protobuf>=6.31.1",
    "tiktoken>=0.12.0",
    "grpcio>=1.78.0",
    "grpcio-tools>=1.78.0",
    "grpcio-reflection>=1.78.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.14.0",
    "pytest-timeout>=2.1.0",
    "requests>=2.25.0",
]

[[tool.uv.index]]
name = "aipcc"
url = "https://packages.redhat.com/api/pypi/public-rhai/rhoai/3.4/cpu-ubi9/simple/"
default = true

[[tool.uv.index]]
name = "aipcc-test"
url = "https://packages.redhat.com/api/pypi/public-rhai/rhoai/3.4/cpu-ubi9-test/simple/"
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
explicit = true

[tool.uv]
# Replace PyPI with our internal index. Using index-url (instead of
# extra-index-url) means uv/pip will NOT fall back to pypi.org.
index-url = "https://packages.redhat.com/api/pypi/public-rhai/rhoai/3.4/cpu-ubi9/simple/"
# Only resolve for our actual target platforms (Linux x86_64 and aarch64).
environments = [
    "platform_system == 'Linux' and platform_machine == 'x86_64'",
    "platform_system == 'Linux' and platform_machine == 'aarch64'",
]
# Drop modelscope (not mirrored in AIPCC); marker is always false.
override-dependencies = [
    "modelscope; python_version < '0'",
]

[tool.uv.sources]
vllm = { index = "aipcc-test" }
pytest-timeout = { index = "pypi" }

[tool.ruff]
exclude = ["tokenizerpb/*_pb2.py", "tokenizerpb/*_pb2_grpc.py"]

[tool.setuptools]
py-modules = ["tokenizer_grpc_service", "run_grpc_server"]

[tool.setuptools.packages.find]
include = ["tokenizer_service*", "tokenizerpb*", "utils*"]
